// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direction asc 1`] = `
.c2 {
  position: absolute;
  top: 4px;
  right: -14px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 {
  position: relative;
  display: inline-block;
  font-weight: bold;
  color: #7f8285;
  text-align: right;
  vertical-align: top;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 17px;
  cursor: pointer;
  color: #000000;
}

.c0:hover {
  color: #000000;
}

.c1 {
  white-space: normal;
  vertical-align: top;
}

<span
  class="c0"
>
  <span
    class="c1"
  >
    Заголовок
  </span>
  <span
    class="BaseIcon IconSortTriangle c2"
    data-lego="react"
  >
    <svg
      fill="currentColor"
      height="12px"
      viewBox="0 0 12 12"
      width="12px"
    >
      <path
        d="M3 3.032h6L6 8.97z"
      />
    </svg>
  </span>
</span>
`;

exports[`direction desc 1`] = `
.c2 {
  position: absolute;
  top: 4px;
  right: -14px;
}

.c0 {
  position: relative;
  display: inline-block;
  font-weight: bold;
  color: #7f8285;
  text-align: right;
  vertical-align: top;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 17px;
  cursor: pointer;
  color: #000000;
}

.c0:hover {
  color: #000000;
}

.c1 {
  white-space: normal;
  vertical-align: top;
}

<span
  class="c0"
>
  <span
    class="c1"
  >
    Заголовок
  </span>
  <span
    class="BaseIcon IconSortTriangle c2"
    data-lego="react"
  >
    <svg
      fill="currentColor"
      height="12px"
      viewBox="0 0 12 12"
      width="12px"
    >
      <path
        d="M3 3.032h6L6 8.97z"
      />
    </svg>
  </span>
</span>
`;

exports[`with default params 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  font-weight: bold;
  color: #7f8285;
  text-align: right;
  vertical-align: top;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 17px;
  cursor: pointer;
}

.c0:hover {
  color: #000000;
}

.c1 {
  white-space: normal;
  vertical-align: top;
}

<span
  class="c0"
>
  <span
    class="c1"
  >
    Заголовок
  </span>
</span>
`;

exports[`with direction and hint 1`] = `
.c2 {
  position: absolute;
  top: 4px;
  right: -14px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c0 {
  position: relative;
  display: inline-block;
  font-weight: bold;
  color: #7f8285;
  text-align: right;
  vertical-align: top;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: 17px;
  cursor: pointer;
  color: #000000;
}

.c0:hover {
  color: #000000;
}

.c1 {
  white-space: normal;
  vertical-align: top;
}

<span
  class="c0"
>
  <span
    class="c1"
  >
    Заголовок
  </span>
  <span
    class="BaseIcon IconSortTriangle c2"
    data-lego="react"
  >
    <svg
      fill="currentColor"
      height="12px"
      viewBox="0 0 12 12"
      width="12px"
    >
      <path
        d="M3 3.032h6L6 8.97z"
      />
    </svg>
  </span>
</span>
`;
